attempt 2 to fix qrcode message bug on iOS

--- a/src/app/partials/qr-code-scanner/qr-code-scanner.component.css
+++ b/src/app/partials/qr-code-scanner/qr-code-scanner.component.css
@@ -143,4 +143,5 @@ div.mini-portrait-wrapper img {
 zxing-scanner {
     display: flex;
     justify-content: stretch;
+    z-index: -1;
 }
